--- a/dekkingen-02a.html
+++ b/dekkingen-02a.html
@@ -26,7 +26,7 @@
 - bron: Accessibility.nl (Harmen)
 - vraag Accessibilty.nl: is dit een juiste benadering?
  -->
- <html>
+ <html lang="nl">
 
  <head>
      <title>Wijziging doorgeven voor Autoverzekering Dacia Duster GT-564-B</title>
