--- a/dekkingen-1a.html
+++ b/dekkingen-1a.html
@@ -1,10 +1,8 @@
-<html>
-
 <!-- Dit voorbeeld toont hoe je je bestaande dekking kan aanpassen, met meer informatie die per dekking kan worden weergegeven.
  Let op: de 'hidden' eigenschap voor de dd-elementen zorgen ervoor dat deze ook voor screenreaders onzichtbaar zijn.
  De dd-elementen worden weergegeven als modal. -->
 
- <!--
+<!--
  
  Aangepast tov versie 01:
 - buttons met label 'meer informatie' voorzien van verborgen tekst, zoals 'over aanvullende pechhulp dekking'
@@ -30,6 +28,7 @@ Openstaande vragen:
 - heeft het meerwaarde om dl, dt en dd te gebruiken in combinatie met het modal dialog gedrag?
 
  -->
+<html lang="nl">
 
 <head>
     <title>Wijziging doorgeven voor Autoverzekering Dacia Duster GT-564-B</title>
@@ -184,7 +183,8 @@ Openstaande vragen:
                             </div>
                         </dd>
                         <button type="button" class="expand-btn" aria-expanded="false" aria-controls="premieDesc">Meer
-                            informatie <span class="visually-hidden">over onze schadeverzekering inzittenden</span></button>
+                            informatie <span class="visually-hidden">over onze schadeverzekering
+                                inzittenden</span></button>
 
                         <dt>Rechtsbijstand</dt>
                         <dd class="modal" role="dialog" aria-modal="true">
@@ -266,11 +266,12 @@ Openstaande vragen:
                                     behandelingen, en revalidatie van passagiers.</p>
                                 <h5>Schade aan persoonlijke eigendommen:</strong> Dit betreft schade aan
                                     bezittingen van passagiers, zoals laptops, telefoons, en andere waardevolle items.
-                                </p>
+                                    </p>
                             </div>
                         </dd>
                         <button type="button" class="expand-btn" aria-expanded="false" aria-controls="premieDesc">Meer
-                            informatie <span class="visually-hidden">over onze schadeverzekering inzittenden</span></button>
+                            informatie <span class="visually-hidden">over onze schadeverzekering
+                                inzittenden</span></button>
 
                         <dt>Rechtsbijstand</dt>
                         <dd class="modal" role="dialog" aria-modal="true">
@@ -352,7 +353,7 @@ Openstaande vragen:
             <label for="ir300">&euro; 300,-</label>
             <input type="radio" id="ir450" name="eigenRisico" value="450">
             <label for="ir450">&euro; 450,-</label>
-          </fieldset>
+        </fieldset>
 
 
         <h3>Extra dekkingen</h3>
@@ -393,7 +394,8 @@ Openstaande vragen:
                             </div>
                         </dd>
                         <button type="button" class="expand-btn" aria-expanded="false"
-                            aria-controls="vervangendVervoerDesc">Meer informatie <span class="visually-hidden">over onze extra vervangend vervoer dekking</span></button>
+                            aria-controls="vervangendVervoerDesc">Meer informatie <span class="visually-hidden">over
+                                onze extra vervangend vervoer dekking</span></button>
                     </li>
                     <li>
                         <input type="checkbox" id="noClaim" name="extraDekking" value="noClaim">
