--- a/dekkingen-03a.html
+++ b/dekkingen-03a.html
@@ -8,7 +8,7 @@ Aanvullende vragen:
 - Voor de ziende mens gebruik je prog discl, is dat ook voor screenreaders handig of onnodig omdat gebruiker zelf kan besluiten dieper in een structuur te duiken of niet?
 - Voor dingen die op de pagina veranderen (eigen risico, premie, etc), moet je dan nog iets met aria-live ofzo?
  -->
- <html>
+ <html lang="nl">
 
  <head>
      <title>Wijziging doorgeven voor Autoverzekering Dacia Duster GT-564-B</title>
