--- a/dekkingen-02a.html
+++ b/dekkingen-02a.html
@@ -213,7 +213,9 @@
  
      <div id="modal" class="modal" role="dialog" aria-modal="true">
          <div class="modal-content">
-             <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+            <button class="close">
+                &times;<span class="visually-hidden">Sluiten</span>
+            </button>
              <h3>Toelichting dekkingen</h3>
  
              <details id="details-aansprakelijkheidsdekking">
