--- a/dekkingen-1a.html
+++ b/dekkingen-1a.html
@@ -118,7 +118,9 @@ Openstaande vragen:
                         <dt>Aansprakelijkheidsdekking</dt>
                         <dd class="modal" role="dialog" aria-modal="true">
                             <div class="modal-content">
-                                <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                                <button class="close">
+                                    &times;<span class="visually-hidden">Sluiten</span>
+                                </button>
                                 <h4>Aansprakelijkheidsdekking</h4>
                                 <p>De aansprakelijkheidsdekking is een verplichte verzekering die de kosten dekt van
                                     schade die u aan anderen
@@ -148,7 +150,9 @@ Openstaande vragen:
                         <dt>Aansprakelijkheidsdekking</dt>
                         <dd class="modal" role="dialog" aria-modal="true">
                             <div class="modal-content">
-                                <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                                <button class="close">
+                                    &times;<span class="visually-hidden">Sluiten</span>
+                                </button>
                                 <h4>Aansprakelijkheidsdekking</h4>
                                 <p>De aansprakelijkheidsdekking is een verplichte verzekering die de kosten dekt van
                                     schade die u aan anderen toebrengt bij een ongeval. Dit omvat zowel materiële schade
@@ -168,7 +172,9 @@ Openstaande vragen:
                         <dt>Schadeverzekering inzittenden</dt>
                         <dd class="modal" role="dialog" aria-modal="true">
                             <div class="modal-content">
-                                <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                                <button class="close">
+                                    &times;<span class="visually-hidden">Sluiten</span>
+                                </button>
                                 <h4>Schadeverzekering inzittenden</h4>
                                 <p>De schadeverzekering inzittenden vergoedt medische kosten en schade aan persoonlijke
                                     eigendommen van passagiers in uw voertuig, ongeacht wie schuldig is aan het ongeval.
@@ -189,7 +195,9 @@ Openstaande vragen:
                         <dt>Rechtsbijstand</dt>
                         <dd class="modal" role="dialog" aria-modal="true">
                             <div class="modal-content">
-                                <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                                <button class="close">
+                                    &times;<span class="visually-hidden">Sluiten</span>
+                                </button>
                                 <h4>Rechtsbijstand</h4>
                                 <p>De rechtsbijstandverzekering biedt juridische hulp bij geschillen na een ongeval. Dit
                                     kan variëren van het verhalen van schade op de tegenpartij tot het verdedigen tegen
@@ -209,7 +217,9 @@ Openstaande vragen:
                         <dt>Ruitschade</dt>
                         <dd class="modal" role="dialog" aria-modal="true">
                             <div class="modal-content">
-                                <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                                <button class="close">
+                                    &times;<span class="visually-hidden">Sluiten</span>
+                                </button>
                                 <h4>Ruitschade</h4>
                                 <p>De ruitschadeverzekering dekt de kosten van reparatie of vervanging van autoruiten
                                     die beschadigd zijn door bijvoorbeeld steenslag of vandalisme.</p>
@@ -236,7 +246,9 @@ Openstaande vragen:
                         <dt>Aansprakelijkheidsdekking</dt>
                         <dd class="modal" role="dialog" aria-modal="true">
                             <div class="modal-content">
-                                <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                                <button class="close">
+                                    &times;<span class="visually-hidden">Sluiten</span>
+                                </button>
                                 <h4>Aansprakelijkheidsdekking</h4>
                                 <p>De aansprakelijkheidsdekking is een verplichte verzekering die de kosten dekt van
                                     schade die u aan anderen toebrengt bij een ongeval. Dit omvat zowel materiële schade
@@ -256,7 +268,9 @@ Openstaande vragen:
                         <dt>Schadeverzekering inzittenden</dt>
                         <dd class="modal" role="dialog" aria-modal="true">
                             <div class="modal-content">
-                                <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                                <button class="close">
+                                    &times;<span class="visually-hidden">Sluiten</span>
+                                </button>
                                 <h4>Schadeverzekering inzittenden</h4>
                                 <p>De schadeverzekering inzittenden vergoedt medische kosten en schade aan persoonlijke
                                     eigendommen van passagiers in uw voertuig, ongeacht wie schuldig is aan het ongeval.
@@ -276,7 +290,9 @@ Openstaande vragen:
                         <dt>Rechtsbijstand</dt>
                         <dd class="modal" role="dialog" aria-modal="true">
                             <div class="modal-content">
-                                <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                                <button class="close">
+                                    &times;<span class="visually-hidden">Sluiten</span>
+                                </button>
                                 <h4>Rechtsbijstand</h4>
                                 <p>De rechtsbijstandverzekering biedt juridische hulp bij geschillen na een ongeval. Dit
                                     kan variëren van het verhalen van schade op de tegenpartij tot het verdedigen tegen
@@ -296,7 +312,9 @@ Openstaande vragen:
                         <dt>Ruitschade</dt>
                         <dd class="modal" role="dialog" aria-modal="true">
                             <div class="modal-content">
-                                <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                                <button class="close">
+                                    &times;<span class="visually-hidden">Sluiten</span>
+                                </button>
                                 <h4>Ruitschade</h4>
                                 <p>De ruitschadeverzekering dekt de kosten van reparatie of vervanging van autoruiten
                                     die beschadigd zijn door bijvoorbeeld steenslag of vandalisme.</p>
@@ -314,7 +332,9 @@ Openstaande vragen:
                         <dt>Allriskdekking</dt>
                         <dd class="modal" role="dialog" aria-modal="true">
                             <div class="modal-content">
-                                <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                                <button class="close">
+                                    &times;<span class="visually-hidden">Sluiten</span>
+                                </button>
                                 <h4>Allriskdekking</h4>
                                 <p>De allriskdekking dekt vrijwel alle schade aan uw eigen voertuig, ongeacht de
                                     oorzaak. Dit omvat schade door aanrijdingen, vandalisme, diefstal, brand en
@@ -371,7 +391,9 @@ Openstaande vragen:
                         </label>
                         <dd id="pechhulpDesc" class="modal" role="dialog" aria-modal="true">
                             <div class="modal-content">
-                                <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                                <button class="close">
+                                    &times;<span class="visually-hidden">Sluiten</span>
+                                </button>
                                 <h4>Pechhulp</h4>
                                 <p>Met de pechhulpdekking krijgt u hulp bij pech onderweg, zoals het slepen van uw
                                     voertuig naar een garage of het verhelpen van kleine problemen ter plaatse.</p>
@@ -387,7 +409,9 @@ Openstaande vragen:
                         </label>
                         <dd id="vervangendVervoerDesc" class="modal" role="dialog" aria-modal="true">
                             <div class="modal-content">
-                                <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                                <button class="close">
+                                    &times;<span class="visually-hidden">Sluiten</span>
+                                </button>
                                 <h4>Vervangend Vervoer</h4>
                                 <p>Met de dekking voor vervangend vervoer krijgt u een vervangende auto als uw eigen
                                     voertuig niet meer kan rijden door schade of een ongeval.</p>
@@ -404,7 +428,9 @@ Openstaande vragen:
                         </label>
                         <dd id="noClaimDesc" class="modal" role="dialog" aria-modal="true">
                             <div class="modal-content">
-                                <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                                <button class="close">
+                                    &times;<span class="visually-hidden">Sluiten</span>
+                                </button>
                                 <h4>No-Claim Beschermer</h4>
                                 <p>Met de no-claim beschermer behoudt u uw no-claim korting, zelfs als u een keer schade
                                     claimt. Dit voorkomt dat uw premie stijgt na een schadegeval.</p>
