--- a/dekkingen-03a.html
+++ b/dekkingen-03a.html
@@ -101,7 +101,9 @@ Aanvullende vragen:
                          informatie <span class="visually-hidden">over onze aansprakelijkheidsdekking</span></button>
                      <div id="modal-aansprakelijkheidsdekking" class="modal" role="dialog" aria-modal="true">
                          <div class="modal-content">
-                             <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                            <button class="close">
+                                &times;<span class="visually-hidden">Sluiten</span>
+                            </button>
                              <h3>WA basisdekking</h3>
                              <p>Een WA-verzekering (Wettelijke Aansprakelijkheid) dekt schade die je aan anderen toebrengt bij een ongeval. Deze verzekering is verplicht voor alle voertuigeigenaren en biedt financiële bescherming tegen claims van derden. Het dekt zowel materiële schade als letselschade die je veroorzaakt. Echter, schade aan je eigen voertuig of jezelf wordt niet gedekt. Deze verzekering is vooral geschikt voor oudere voertuigen of als je niet veel rijdt.</p>
                              <h4>Wat je krijgt:</h4>
@@ -140,7 +142,9 @@ Aanvullende vragen:
                          informatie <span class="visually-hidden">over onze dekkingen</span></button>
                      <div id="modal-schadeverzekeringinzittenden" class="modal" role="dialog" aria-modal="true">
                          <div class="modal-content">
-                             <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                            <button class="close">
+                                &times;<span class="visually-hidden">Sluiten</span>
+                            </button>
                              <h3>WA Plus basisdekking</h3>
                              <p>Een WA Plus-verzekering biedt extra zekerheid voor mensen die regelmatig op de weg zitten. Naast de basisdekking van een WA-verzekering, dekt WA Plus ook schade aan je eigen voertuig door bijvoorbeeld brand, diefstal of storm. Bovendien biedt het dekking voor schade aan inzittenden, zoals medische kosten en letselschade. Dit type verzekering is ideaal voor wie meer bescherming wil dan alleen de wettelijke aansprakelijkheid. Het biedt een goede balans tussen uitgebreide dekking en betaalbaarheid.</p>
                              <h4>Wat je krijgt:</h4>
@@ -218,7 +222,9 @@ Aanvullende vragen:
                          informatie <span class="visually-hidden">over onze dekkingen</span></button>
                      <div id="modal-allriskdekking" class="modal" role="dialog" aria-modal="true">
                          <div class="modal-content">
-                             <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                            <button class="close">
+                                &times;<span class="visually-hidden">Sluiten</span>
+                            </button>
                              <h3>All-Risk basisdekking</h3>
                              <p>Een All-risk verzekering biedt de meest uitgebreide dekking voor je voertuig. Naast de dekking van een WA en WA Plus verzekering, dekt All-risk ook schade aan je eigen voertuig, ongeacht wie de schuldige is. Dit omvat schade door aanrijdingen, vandalisme, en zelfs eigen fouten. Het biedt volledige gemoedsrust voor wie volledig ontzorgd wil zijn. Deze verzekering is ideaal voor nieuwe of waardevolle voertuigen en voor mensen die maximale bescherming willen.</p>
                              <h4>Wat je krijgt:</h4>
@@ -326,7 +332,9 @@ Aanvullende vragen:
                              informatie <span class="visually-hidden">over onze pechhulp dekking</span></button>
                          <div id="modal-pechhulp" class="modal" role="dialog" aria-modal="true">
                              <div class="modal-content">
-                                 <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                                <button class="close">
+                                    &times;<span class="visually-hidden">Sluiten</span>
+                                </button>
                                  <h3>Pechhulp dekking</h3>
                                  <p>Met de pechhulpdekking krijgt u hulp bij pech onderweg, zoals het slepen van uw
                                      voertuig naar
@@ -345,7 +353,9 @@ Aanvullende vragen:
                                  dekking</span></button>
                          <div id="modal-vervangendvervoer" class="modal" role="dialog" aria-modal="true">
                              <div class="modal-content">
-                                 <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                                <button class="close">
+                                    &times;<span class="visually-hidden">Sluiten</span>
+                                </button>
                                  <h3>Vervangend Vervoer dekking</h3>
                                  <p>Met de dekking voor vervangend vervoer krijgt u een vervangende auto als uw eigen
                                      voertuig
@@ -363,7 +373,9 @@ Aanvullende vragen:
                              informatie <span class="visually-hidden">over onze no claim bescherming</span></button>
                          <div id="modal-noclaim" class="modal" role="dialog" aria-modal="true">
                              <div class="modal-content">
-                                 <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                                <button class="close">
+                                    &times;<span class="visually-hidden">Sluiten</span>
+                                </button>
                                  <h3>No-Claim bescherming</h3>
                                  <p>Met de no-claim beschermer behoudt u uw no-claim korting, zelfs als u een keer
                                      schade claimt.
