re-applied lang attr and focusable modal buttons

--- a/dekkingen-00a.html
+++ b/dekkingen-00a.html
@@ -32,7 +32,7 @@ Aangepast tov versie 00:
 
 TODO: ook info dialog bij onderdelen
 -->
-<html>
+<html lang="nl">
 
 <head>
     <title>Wijziging doorgeven voor Autoverzekering Dacia Duster GT-564-B</title>
@@ -194,7 +194,9 @@ TODO: ook info dialog bij onderdelen
                         </label>
                         <dd id="pechhulpDesc" class="modal" role="dialog" aria-modal="true">
                             <div class="modal-content">
-                                <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                                <button class="close">
+                                    &times;<span class="visually-hidden">Sluiten</span>
+                                </button>
                                 <h4>Pechhulp</h4>
                                 <p>Met de pechhulpdekking krijgt u hulp bij pech onderweg, zoals het slepen van uw
                                     voertuig naar een garage of het verhelpen van kleine problemen ter plaatse.</p>
@@ -210,7 +212,9 @@ TODO: ook info dialog bij onderdelen
                         </label>
                         <dd id="vervangendVervoerDesc" class="modal" role="dialog" aria-modal="true">
                             <div class="modal-content">
-                                <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                                <button class="close">
+                                    &times;<span class="visually-hidden">Sluiten</span>
+                                </button>
                                 <h4>Vervangend Vervoer</h4>
                                 <p>Met de dekking voor vervangend vervoer krijgt u een vervangende auto als uw eigen
                                     voertuig niet meer kan rijden door schade of een ongeval.</p>
@@ -226,7 +230,9 @@ TODO: ook info dialog bij onderdelen
                         </label>
                         <dd id="noClaimDesc" class="modal" role="dialog" aria-modal="true">
                             <div class="modal-content">
-                                <span class="close">&times;<span class="visually-hidden">Sluiten</span></span>
+                                <button class="close">
+                                    &times;<span class="visually-hidden">Sluiten</span>
+                                </button>
                                 <h4>No-Claim Beschermer</h4>
                                 <p>Met de no-claim beschermer behoudt u uw no-claim korting, zelfs als u een keer schade
                                     claimt. Dit voorkomt dat uw premie stijgt na een schadegeval.</p>
