new proto variant added

--- a/dekkingen-00a.html
+++ b/dekkingen-00a.html
@@ -16,6 +16,8 @@ Aangepast tov versie 00:
 - bron: Accessibility.nl (Harmen)
 - vraag Accessibilty.nl: is dit een juiste benadering?
 
+-> 
+
 - buttons met label 'meer informatie' voorzien van verborgen tekst, zoals 'over aanvullende pechhulp dekking'
 - bron: Accessibility.nl (Harmen)
 - vraag Accessibilty.nl: is dit een juiste benadering?
@@ -29,6 +31,9 @@ Aangepast tov versie 00:
 - bron: Accessibility.nl (Harmen)
 - vraag Accessibilty.nl: is dit een juiste benadering?
 - vraag Accessibilty.nl: wat moeten we doen om de close button de juiste rol mee te geven?
+
+- language attribute op html
+- focusable buttons op close modal
 
 TODO: ook info dialog bij onderdelen
 -->
