--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <li>
                 <a href="dekkingen-03a.html">dekkingen 03a</a>
             </li>
+            <li>
+                <a href="dekkingen-04.html">dekkingen 04</a>
+            </li>
         </ul>
     </body>
 </html>
